# mem

./: .env.example  .gitignore  README.md  biome.json  package-lock.json  package.json  prettier.config.js  svelte.config.js  vitest.config.ts
.agents/skills/refactor-planner/: SKILL.md
.agents/skills/run-dev-verifier/: SKILL.md
.agents/skills/subagent-orchestrator/: SKILL.md
.claude/skills/orchestra/: SKILL.md
.cursor/: config.toml
.doc/: aa.txt  ai-coding-folder-convention.md  create_flow.txt  forbidden_code_examples_4hm.md  git_issue  grillme.md  preview (1).html  preview (3).html  preview.html  serena_token_summary.html  web_system_prefix_guide.html
.notes/: flow_map.md
rag_rust/: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
rag_rust/samples/: support_histories_seed.json
rag_rust/src/: m01_models.rs  m02_db.rs  m03_seed.rs  m04_embedding.rs  m06_query_normalizer.rs  main.rs
rag_rust/src/m05_api/: m05_api_init_seed.rs  m05_api_search_text.rs  m05_api_table_rows.rs  m05_api_tables.rs  mod.rs
rag_rust/static/: chunking-rules.html  cs-rag-design.html  data-flow.html  index.html
src/: app.html
src/lib/: auth.svelte.ts  employees.svelte.ts  expenses.svelte.ts  masterCategories.svelte.ts  masterCategories.test.ts  masterCategories.ts  msAuth.ts
src/lib/components/: KeihiSidebar.svelte  RadialMenu.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/approvals/: +page.svelte
src/routes/employees/: +page.svelte
src/routes/expenses/: +page.svelte
src/routes/login/: +page.svelte
(+12 files in other folders)
